--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,13 @@ name = "date-rs-t6"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+wasm-bindgen = "0.2.95"
+chrono = "0.4.38"
+
+# [[bin]]
+# name = "lib_main"
+# path = "src/lib.rs"
