--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "date-rs-t6"
 version = "0.1.0"
 edition = "2021"
+authors = ["TakaShinoda"]
+description = "A sample project with wasm-pack"
+license = "MIT/Apache-2.0"
+repository = "https://github.com/TakaShinoda/date-rs-t6"
 
 [lib]
 crate-type = ["cdylib"]
