--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "date-rs-t6"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 authors = ["TakaShinoda"]
 description = "A sample project with wasm-pack"
-license = "MIT/Apache-2.0"
+license = "MIT"
 repository = "https://github.com/TakaShinoda/date-rs-t6"
 
 [lib]
