--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,11 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.95"
 chrono = "0.4.38"
+js-sys = "0.3.72"
 
 # [[bin]]
 # name = "lib_main"
 # path = "src/lib.rs"
+
+# [package.metadata.wasm-pack.profile.release]
+# wasm-opt = false
